[package]
name = "weather_rest"
version = "0.1.0"
authors = ["Claus Guttesen <kometen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
actix-rt = "1.1.1"
actix-service = "1.0.1"
reqwest = "0.9.18"
openssl = { version = "0.10", features = ["v111"]}
serde = "1.0.125"
serde_json = "1.0.64"
serde_derive = "1.0.125"
diesel = { version = "1.4.6", features = ["postgres", "uuidv07", "r2d2", "chrono", "numeric", "serde_json"] }
chrono = { version = "0.4.19", features = ["serde"] }
bigdecimal = { version = "0.1.0", features = ["serde"] }
dotenv = "0.15"
futures = "0.3.13"
r2d2 = "0.8.9"
