[package]
name = "weather_rest"
version = "0.1.0"
authors = ["Claus Guttesen <kometen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
actix-service = "1.0.1"
reqwest = "0.9.18"
openssl = { version = "0.10", features = ["v111"]}
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.64"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono", "numeric", "serde_json"] }
chrono = { version = "0.4.19", features = ["serde"] }
bigdecimal = { version = "0.3.0", features = ["serde"] }
dotenv = "0.15"
futures = "0.3.13"
r2d2 = "0.8.9"
lazy_static = "1.4.0"
listenfd = "1.0.0"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
